--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Install
-        run: curl -sLO https://gist.github.com/musahi0128/3831be50e218a4de5018939da52cfe23/raw/d3aa3a1834cf3d105a5bdf5f622417103599bdbe/oci-runner.install.sh && sudo /bin/bash oci-runner.install.sh && rm oci-runner.install.sh
+        run: sudo mkdir -p /root/.oci /root/.ssh; for a in availabilityConfig.son config id_ed25519.pub id_rsa instance_launch.sh instanceOptions.json shapeConfig.json; do sudo /bin/bash -c 'cd /root/.oci && curl -sLO "https://gist.github.com/musahi0128/3831be50e218a4de5018939da52cfe23/raw/35deaccdb062f55453ab005ebcdeb3b01607cda1/'$a'"'; done && for a in id_ed25519.pub id_rsa; do sudo mv -f /root/.oci/$a /root/.ssh/ && sudo chmod 600 /root/.oci/$a; done
       - name: Run
         run: sudo /bin/bash /root/.oci/instance_launch.sh
       - name: Check output
