--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,17 @@
-# This is a basic workflow to help you get started with Actions
-
 name: OCI runner
-
-# Controls when the workflow will run
 on:
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+    branches:
+      - 'main'
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/musahi0128/ubuntu-docker:oci-runner
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Preparation
         run: sudo mkdir -p /root/.oci /root/.ssh
