--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           cat /root/.oci/instance_launch.sh
           echo Location of oci executable:
           whereis oci
+          echo List of file with name oci:
+          sudo find / -name oci
           sudo bash /root/.oci/instance_launch.sh
       - name: Check output
         run: for a in 1 2 3; do sudo cat /root/.oci/instance_launch.$a.log; done
