--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,19 @@ jobs:
           sudo curl -sLO "https://gist.github.com/musahi0128/3831be50e218a4de5018939da52cfe23/raw/35deaccdb062f55453ab005ebcdeb3b01607cda1/id_rsa"
       - name: Run
         run: |
-          echo Content of /root/.oci/instance_launch.sh:
-          cat /root/.oci/instance_launch.sh
-          echo Version of oci
-          /root/bin/oci --version
-          echo List of file with name oci:
-          sudo find / -name oci
-          sudo bash /root/.oci/instance_launch.sh
-          wait
+          export OCI_CLI_RC_FILE=/root/.oci/config; /root/bin/oci compute instance launch \
+          --debug \
+          --availability-domain pKfE:PHX-AD-1 \
+          --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
+          --shape VM.Standard.A1.Flex \
+          --subnet-id ocid1.subnet.oc1.phx.aaaaaaaa5nfz6vn44fsmxb7fbm5s3ter3rjnpppgcm5nlraeir5swmvuj2qa \
+          --assign-private-dns-record true \
+          --assign-public-ip false \
+          --availability-config file:///root/.oci/availabilityConfig.json \
+          --display-name oracle-ocp-aarch64 \
+          --image-id ocid1.image.oc1.phx.aaaaaaaat7ebgwjg5n4rm3aivj5ejm7v2w7pfqpz3zrix6x5xt522sfipg3q \
+          --instance-options file:///root/.oci/instanceOptions.json \
+          --shape-config file:///root/.oci/shapeConfig.json \
+          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub
       - name: Check output
         run: for a in 1 2 3; do sudo cat /root/.oci/instance_launch.$a.log; done
