--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           sudo curl -sLO "https://gist.github.com/musahi0128/3831be50e218a4de5018939da52cfe23/raw/35deaccdb062f55453ab005ebcdeb3b01607cda1/id_rsa"
       - name: Run
         run: |
-          export OCI_CLI_RC_FILE=/root/.oci/config; /root/bin/oci compute instance launch \
+          export OCI_CLI_RC_FILE=/root/.oci/config; sudo /root/bin/oci compute instance launch \
           --debug \
           --availability-domain pKfE:PHX-AD-1 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
