--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
     steps:
+      - name: Cache Container Images
+        id: cache-container-images
+        uses: jamesmortensen/cache-container-images-action@v1
+        with:
+          images: ghcr.io/musahi0128/ubuntu-docker:oci-runner
       - name: Preparation
         run: sudo mkdir -p /root/.oci /root/.ssh
       - name: Install step 1
@@ -30,8 +35,10 @@ jobs:
           sudo curl -sLO "https://gist.github.com/musahi0128/3831be50e218a4de5018939da52cfe23/raw/35deaccdb062f55453ab005ebcdeb3b01607cda1/id_rsa"
       - name: Run
         run: |
-          export OCI_CLI_RC_FILE=/root/.oci/config; sudo /root/bin/oci compute instance launch \
-          --debug \
+          export OCI_CLI_RC_FILE=/root/.oci/config
+          sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
+          sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
+          sudo /root/bin/oci compute instance launch \
           --availability-domain pKfE:PHX-AD-1 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
           --shape VM.Standard.A1.Flex \
