--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Cache Docker images.
         uses: ScribeMD/docker-cache@0.3.7
         with:
-          key: docker-${{ runner.os }}-${{ hashFiles('/root/bin/oci') }}
+          path: |
+            /root/bin/oci
       - name: Preparation
         run: sudo mkdir -p /root/.oci /root/.ssh
       - name: Install step 1
