--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Cache Docker images.
         uses: ScribeMD/docker-cache@0.3.7
         with:
-          path: |
-            /root/bin/oci
+          key: docker-${{ runner.os }}-${{ hashFiles(paths) }}
       - name: Preparation
         run: sudo mkdir -p /root/.oci /root/.ssh
       - name: Install step 1
