--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
           --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub & done
-          while wait -n; do : ; done;
+          sudo wait
