--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 3
     container:
       image: ghcr.io/musahi0128/ubuntu-docker:oci-runner
       credentials:
@@ -50,5 +50,4 @@ jobs:
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
           --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub & done
-          while [[ "$(jobs | wc -l)" -ne "0" ]]; do sleep 5; done
-          exit
+          while [[ "$(jobs | wc -l)" -ne "0" ]]; do echo "$(jobs | wc -l)"; sleep 5; done
