--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - 'main'
-  schedule:
-    - cron: '*/10 * * * *'
+  # schedule:
+  #   - cron: '*/10 * * * *'
   workflow_dispatch:
+  workflow_run:
+    workflows: ["OCI runner"]
+    types:
+      - completed
 jobs:
   instance_launch:
     runs-on: ubuntu-latest
@@ -21,7 +25,7 @@ jobs:
           export OCI_CLI_RC_FILE=/root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
-          sudo /root/bin/oci compute instance launch \
+          for a in $(seq 1 120); do sudo /root/bin/oci compute instance launch \
           --availability-domain pKfE:PHX-AD-3 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
           --shape VM.Standard.A1.Flex \
@@ -33,4 +37,4 @@ jobs:
           --image-id ocid1.image.oc1.phx.aaaaaaaat7ebgwjg5n4rm3aivj5ejm7v2w7pfqpz3zrix6x5xt522sfipg3q \
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
-          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub
+          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub; sleep 60; done
