--- a/.github/workflows/b.yml
+++ b/.github/workflows/b.yml
@@ -1,8 +1,8 @@
 name: OCI runner #2
 on:
-  push:
-    branches:
-      - 'main'
+  # push:
+  #   branches:
+  #     - 'main'
   # schedule:
   #   - cron: '*/10 * * * *'
   workflow_dispatch:
