--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,8 +1,8 @@
-name: OCI runner #1
+name: "OCI runner #1"
 on:
-  push:
-    branches:
-      - 'main'
+  # push:
+  #   branches:
+  #     - 'main'
   # schedule:
   #   - cron: '*/10 * * * *'
   workflow_dispatch:
