--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,10 +1,5 @@
 name: "OCI runner #1"
 on:
-  # push:
-  #   branches:
-  #     - 'main'
-  # schedule:
-  #   - cron: '*/10 * * * *'
   workflow_dispatch:
   workflow_run:
     workflows: ["OCI runner #2"]
@@ -24,7 +19,7 @@ jobs:
           export OCI_CLI_RC_FILE=/root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
-          for a in $(seq 1 120); do sudo /root/bin/oci compute instance launch \
+          for a in {1..120}; do sudo /root/bin/oci compute instance launch \
           --availability-domain pKfE:PHX-AD-3 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
           --shape VM.Standard.A1.Flex \
