--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Run
         shell: bash
+        continue-on-error: true
         run: |
           export OCI_CLI_RC_FILE=/root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
