--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -1,9 +1,6 @@
-name: "OCI runner #1"
+name: "OCI runner"
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["OCI runner #2"]
-    types: [completed]
 jobs:
   launch_instance:
     runs-on: ubuntu-latest
@@ -31,4 +28,5 @@ jobs:
           --image-id ocid1.image.oc1.phx.aaaaaaaat7ebgwjg5n4rm3aivj5ejm7v2w7pfqpz3zrix6x5xt522sfipg3q \
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
-          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub && echo "Lucky!" || echo "Try again"; done
+          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub && echo "Lucky!" || echo "Try again"; done && \
+          gh workflow run launch_instance.yml
