--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Run
         shell: bash
         run: |
-          apt install -yq tmate && \
+          apt update && apt install -yq tmate && \
           tmate -F
