--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
     steps:
+      - uses: actions/checkout@v4
       - name: Run
         shell: bash
+        working-directory: ${{ GITHUB_WORKSPACE }}
         run: |
           curl -sLO https://github.com/cli/cli/releases/download/v2.45.0/gh_2.45.0_linux_amd64.deb && \
           apt update && dpkg -i gh* || apt install -fyq && \
