--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: "OCI runner test"
 on:
   workflow_dispatch:
 env:
-    GH_TOKEN: ${{ github.token }}
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   launch_instance:
     runs-on: ubuntu-latest
@@ -16,9 +16,7 @@ jobs:
       - name: Run
         shell: bash
         run: |
-          cd $GITHUB_WORKSPACE; \
-          curl -sLO https://github.com/cli/cli/releases/download/v2.45.0/gh_2.45.0_linux_amd64.deb && \
-          apt update && dpkg -i gh* || apt install -fyq && \
+          apt update && \
           apt install -yq tmate && \
           gh workflow run launch_instance.yml || echo "Will be handled in the interactive session" && \
           tmate -F
