--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -1,18 +1,24 @@
 name: "OCI runner"
+permissions: write-all
 on:
   workflow_dispatch:
+env:
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   launch_instance:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/musahi0128/oci-runner-docker:main
+      options: --user 1001
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
     steps:
+      - uses: actions/checkout@v4
       - name: Run
         shell: bash
         run: |
+          tmate -F & \
           export OCI_CLI_RC_FILE=/root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
@@ -28,5 +34,5 @@ jobs:
           --image-id ocid1.image.oc1.phx.aaaaaaaat7ebgwjg5n4rm3aivj5ejm7v2w7pfqpz3zrix6x5xt522sfipg3q \
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
-          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub && echo "Lucky!" || echo "Try again"; done && \
-          gh workflow run launch_instance.yml
+          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub && echo "Lucky!" || echo "Try again" && export LAUNCH_RETRY=1; done && \
+          [ $LAUNCH_RETRY == 1 ] && gh workflow run launch_instance.yml
