--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
 env:
     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    OCI_CLI_RC_FILE: "/root/.oci/config"
 jobs:
   launch_instance:
     runs-on: ubuntu-latest
@@ -15,11 +16,11 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
       - uses: actions/checkout@v4
-      - name: Run
+      - name: Launch instance
         shell: bash
         run: |
-          journalctl -u srv.us.service
-          export OCI_CLI_RC_FILE=/root/.oci/config
+          sudo systemctl enable ttyd.service srv.us.service
+          sudo journalctl -u srv.us.service
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
           for a in {1..180}; do sudo /root/bin/oci compute instance launch \
