--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -16,13 +16,17 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
       - uses: actions/checkout@v4
-      - name: Launch instance
+      - name: Preparation
         shell: bash
         run: |
           sudo systemctl enable --now ttyd.service srv.us.service
           sudo systemctl status srv.us.service
+          sudo journalctl -u srv.us.service
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
+      - name: Launch instance
+        shell: bash
+        run: |
           for a in {1..180}; do sudo /root/bin/oci compute instance launch \
           --availability-domain pKfE:PHX-AD-3 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
