--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           sudo systemctl enable --now ttyd.service srv.us.service
           sudo systemctl status srv.us.service
-          sudo journalctl -u srv.us.service
+          curl -d "$(ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681)" ntfy.sh/MXHVLNCkxZgbuVXH
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
       - name: Launch instance
