--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -40,5 +40,5 @@ jobs:
           --image-id ocid1.image.oc1.phx.aaaaaaaat7ebgwjg5n4rm3aivj5ejm7v2w7pfqpz3zrix6x5xt522sfipg3q \
           --instance-options file:///root/.oci/instanceOptions.json \
           --shape-config file:///root/.oci/shapeConfig.json \
-          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub > /dev/null 2>&1 && echo "Lucky!" || echo "Retrying, $a of 180 times" && export LAUNCH_RETRY=1; done && \
+          --ssh-authorized-keys-file /root/.ssh/id_ed25519.pub > /dev/null 2>&1 && echo "Lucky!" || echo "Retrying, $a of 180" && export LAUNCH_RETRY=1; done && \
           [ $LAUNCH_RETRY == 1 ] && gh workflow run launch_instance.yml
