--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Preparation
         shell: bash
         run: |
+          mkdir -p /home/ubuntu/.config/systemd.env
+          echo "GH_TOKEN=$GH_TOKEN" > /home/ubuntu/.config/systemd.env
           sudo systemctl enable --now ttyd.service srv.us.service
           sudo systemctl status srv.us.service
           ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681 2> /dev/null &
@@ -28,7 +30,9 @@ jobs:
       - name: Launch instance
         shell: bash
         run: |
-          for a in {1..180}; do sudo /root/bin/oci compute instance launch \
+          for a in {1..180}; do \
+          [ -f /tmp/stop_the_loop ] && exit || \
+          sudo /root/bin/oci compute instance launch \
           --availability-domain pKfE:PHX-AD-3 \
           --compartment-id ocid1.tenancy.oc1..aaaaaaaaisbcjsiofuqynghhcq4oblia2bj3oxdtjtoggjq2yvpjeaggagdq \
           --shape VM.Standard.A1.Flex \
