--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Preparation
         shell: bash
         run: |
-          mkdir -p /home/ubuntu/.config/systemd.env
+          mkdir -p /home/ubuntu/.config/
           echo "GH_TOKEN=$GH_TOKEN" > /home/ubuntu/.config/systemd.env
           sudo systemctl enable --now ttyd.service srv.us.service
           ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681 2> /dev/null > /tmp/srv.us.addr &
